--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": " https://github.com/Sridharvnp/portfolio/",
+  "homepage": "https://Sridharvnp.github.io/portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
