--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-"homepage": "https://sridharvnp.github.io/portfolio",
+  "homepage": "https://sridharvnp.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build ",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "update": "npm run build && netlify deploy --prod --dir=dist"
   },
   "dependencies": {
     "aos": "^2.3.4",
